Tried to hook up ingestors, not quite there
git-svn-id: https://cida-svn.er.usgs.gov/repos/dev/usgs/dcpt/trunk@16147 622dc1fb-2224-0410-ab72-dc85a3975e1a

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@
     <!-- #################### SERVLET CONFIGURATION #################### -->
     <servlet>
         <servlet-name>IngestControlServlet</servlet-name>
-        <servlet-class>gov.usgs.cida.ncetl.servlet.IngestControlServlet</servlet-class>
+        <servlet-class>gov.usgs.cida.ncetl.utils.IngestController</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>DecorateServlet</servlet-name>
